# download_qbittorrent

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
configs/: template.yaml
crawler/: __init__.py  cli.py  config.py  extract.py  fetch.py  pipeline.py  qb.py
tests/: conftest.py  test_config.py  test_extract.py  test_pipeline.py
