[project]
name = "download-qbittorrent"
version = "0.1.0"
description = "Config-driven async crawler engine — scrape websites, extract magnet links, send to qBittorrent"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "playwright>=1.52.0",
    "playwright-stealth>=2.0.3",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pyright>=1.1.411", "ruff>=0.11.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawler"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "I", "N", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
